增加首页新闻模块

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -9,3 +9,7 @@ $navbar-default-link-hover-color:#00AFC4;
 
 $jumbotron-font-size:15px;
 $jumbotron-heading-font-size:30px;
+$jumbotron-bg:#fff;
+
+$btn-default-bg:#00AFC4;
+$btn-default-color:#fff;
