--- a/app/styles/screen.scss
+++ b/app/styles/screen.scss
@@ -18,6 +18,7 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 // endbower
 /*全局样式*/
 body {
+  background-color: #F9F6F6;
   font:{
   	size:14px;
   	family:"微软雅黑,Helvetica Neue,Helvetica,Arial,sans-serif";
@@ -49,23 +50,75 @@ body {
 /*大图*/
 .bgpic{
 	margin-top: 15px;
+	width: 100%;
 }
 
 /*内容区*/
 .content{
 	margin-top: 20px;
-	.intro{
+	//新闻发布区
+	article{
+		padding: 15px;
+		background-color: #fff;
 		margin-bottom: 20px;
-		text-align: center;
-		border-bottom: 1px solid #d9d9d9;
+		//头部
+		.post-head{
+			text-align: center;
+			.post-title{
+				font:{
+					size:2em;
+					weight:400;
+				}
+				color:#303030;
+			}
+			.post-meta{
+				color:#959595;
+				line-height: 25px;
+				b{
+					color:#00AFC4;
+				}
+			}
+
+		}
+		//正文摘要,需要限定高度
+		.post-content{
+			height:90px;
+			margin-top: 10px;
+			overflow: hidden;
+			text-overflow:ellipsis;
+			p{
+				text-indent: 2em;
+				line-height: 28px;
+				font-size: 16px;
+			}
+		}
+		//正文底部
+		//类别
+		.post-category{
+			height:30px;
+			padding-top: 20px;
+			color:#959595;
+		}
 	}
-	.intro-title{
-		font-size: 30px;
-	}
-	.intro-body{
-		font-size: 15px;
-		color:#666;
-		line-height: 25px;
+	//简介区
+	.intro{
+		margin: 0 auto;
+		margin-bottom: 20px;
+		text-align:center;
+		background-color: #fff;
+		padding: 15px;
+		border:{
+			bottom: 1px solid #d9d9d9;
+			left:2px solid #1b809e;
+		}
+		.intro-title{
+			font-size: 30px;
+		}
+		.intro-body{
+			font-size: 15px;
+			color:#666;
+			line-height: 25px;
+		}
 	}
 }
 .section-title{
@@ -77,7 +130,6 @@ body {
 
 /*底部*/
 .footer{
-	height:260px;
 	background-color: $base-color;
 	color:white;
 }
