--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -3,6 +3,9 @@ $base-color:#00AFC4;
 $navbar-height:80px;
 //$navbar-default-link-color:#000;
 $navbar-default-link-hover-color:#00AFC4;
+$navbar-default-toggle-hover-bg:#00AFC4;
+$navbar-default-toggle-icon-bar-bg:#fff;
+$navbar-default-toggle-border-color:none;
 
 $jumbotron-font-size:15px;
 $jumbotron-heading-font-size:30px;
