--- a/app/styles/_project-bootstrap-import.scss
+++ b/app/styles/_project-bootstrap-import.scss
@@ -26,3 +26,4 @@
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navbar";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
+@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
