修改了项目内容页面和增加了申请指南

--- a/app/styles/_guide-bootstrap-import.scss
+++ b/app/styles/_guide-bootstrap-import.scss
@@ -8,6 +8,7 @@
 //模块
 @import "components/header";
 @import "components/section";
+@import "components/sidebar";
 @import "components/footer";
 //bootstrap
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/variables";
@@ -22,8 +23,4 @@
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navs";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navbar";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/panels";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/jumbotron";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
