--- a/app/styles/project.scss
+++ b/app/styles/project.scss
@@ -7,8 +7,8 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 .content{
 	margin-top: 20px;
 	@at-root{
-		.post{
-			
+		.project-heading{
+			padding-top:20px;
 		}
 	}
 }
