--- a/app/styles/setting/_variables.scss
+++ b/app/styles/setting/_variables.scss
@@ -19,3 +19,19 @@ $jumbotron-bg:                          #fff;
 //按钮
 $btn-default-bg:                        #00AFC4;
 $btn-default-color:                     #fff;
+
+//panel
+$panel-heading-padding:                18px 15px;
+$panel-default-heading-bg:             #5DA1CA;
+$panel-default-text:                   #fff;
+$panel-primary-heading-bg:             #755959;
+$panel-primary-text:                   #fff;
+$panel-success-heading-bg:             #B6C14B;
+$panel-success-text:                   #fff;
+$panel-info-heading-bg:                #72AFB6;
+$panel-info-text:                      #fff;
+$panel-warning-heading-bg:             #918A7B;
+$panel-warning-text:                   #fff;
+$panel-danger-heading-bg:              #E56A45;
+$panel-danger-text:                    #fff;
+
