--- a/app/styles/_guide-bootstrap-import.scss
+++ b/app/styles/_guide-bootstrap-import.scss
@@ -23,4 +23,6 @@
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navs";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navbar";
+@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/close";
+@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/modals";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
