--- a/app/styles/components/_sidebar.scss
+++ b/app/styles/components/_sidebar.scss
@@ -1,12 +1,12 @@
-.sidebar{
-	a{
-		display: block;
+%item{
+	display: block;
 		height: 80px;
 		line-height: 80px;
 		text-align: center;
 		margin: 25px auto;
 		width: 80%;
 		background-color: #EDF1F2;
+		border:none;
 		color:#6C6363;
 		font:{
 			size:20px;
@@ -14,6 +14,11 @@
 		&:hover{
 			background-color: $base-color;
 			color:#fff;
+			cursor: pointer;
 		}
+}
+.sidebar{
+	button,a{
+		@extend %item;
 	}
 }
