--- a/app/styles/setting/_variables.scss
+++ b/app/styles/setting/_variables.scss
@@ -35,3 +35,5 @@ $panel-warning-text:                   #fff;
 $panel-danger-heading-bg:              #E56A45;
 $panel-danger-text:                    #fff;
 
+//table
+$table-cell-padding:                   10px;
