--- a/app/styles/setting/_variables.scss
+++ b/app/styles/setting/_variables.scss
@@ -15,7 +15,9 @@ $jumbotron-font-size:                   15px;
 $jumbotron-heading-font-size:           26px;
 $jumbotron-bg:                          #fff;
 
-
+//学生之声
+$thumbnail-bg:                          #fff;
+$thumbnail-border:                      #fff;
 //按钮
 $btn-default-bg:                        #00AFC4;
 $btn-default-color:                     #fff;
