新增留学申请页

--- a/app/styles/_studyabroad-bootstrap-import.scss
+++ b/app/styles/_studyabroad-bootstrap-import.scss
@@ -10,6 +10,13 @@
 @import "components/section";
 @import "components/footer";
 @import "components/link";
+//动画
+@import "tools/animated";
+@import "tools/rollIn";
+@import "tools/rollOut";
+@import "tools/fadeIn";
+@import "tools/lightSpeedIn";
+
 //bootstrap
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/variables";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
@@ -23,5 +30,4 @@
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navs";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navbar";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/tables";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
