--- a/app/styles/screen.scss
+++ b/app/styles/screen.scss
@@ -9,20 +9,29 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 			guide-bootstrap-import.scss........申请指南
 			schedule-bootstrap-import.scss.....日常安排
 			news-bootstrap-import.scss.........news
+			studyabroad-bootstrap-import.scss..留学
 		TOOLS
-
+			animated.scss.......................进行文字的简单动画
+			fadeIn.scss.........................淡入
+			fadeOut.scss........................淡出
+			rollIn.scss.........................旋转而入
+			rollOut.scss........................旋转而出
+			lightSpeedIn.scss...................闪入
+			lightSpeedOut.scss..................闪出
 		COMPONENTS
 			header.scss....................头部样式，导航栏
 			footer.scss....................底部样式，联系我们
 			section.scss..................栏目样式
 			article.scss..................新闻样式
 			sidebar.scss..................边栏样式，避免下拉菜单，保持页面整洁
+			link.scss.....................链接样式
 		BASE
 			screen.scss....................首页样式
 			project.scss...................项目内容样式
 			guide.scss.....................申请指南
 			schedule.scss..................日常安排
 			news.scss......................news全文
+			studyabroad.scss...............留学申请
 */
 @import "screen-bootstrap-import";
 /*大图*/
