基本完成留学申请;

--- a/app/styles/_studyabroad-bootstrap-import.scss
+++ b/app/styles/_studyabroad-bootstrap-import.scss
@@ -10,6 +10,7 @@
 @import "components/section";
 @import "components/footer";
 @import "components/link";
+@import "components/intro";
 //动画
 @import "tools/animated";
 @import "tools/rollIn";
