--- a/app/styles/components/_link.scss
+++ b/app/styles/components/_link.scss
@@ -9,6 +9,15 @@
 	.link-pst{
 		background-color: #C0504D;
 	}
+	.link-color-1{
+		background-color: #32CCFE;
+	}
+	.link-color-2{
+		background-color: #FAF331;
+	}
+	.link-color-3{
+		background-color: #F85556;
+	}
 	a{
 		display: block;
 		width: 100%;
@@ -17,9 +26,13 @@
 		line-height: 40px;
 		text-align: center;
 		font-size: 20px;
-		text-decoration: none;
+		margin: 0 auto;
+		text-decoration: none !important;
 		&:hover{
 			background-color: #337AB7;
 		}
+	}
+	.link-sm{
+		font-size: 16px;
 	}
 }
