--- a/app/styles/components/_link.scss
+++ b/app/styles/components/_link.scss
@@ -18,6 +18,9 @@
 	.link-color-3{
 		background-color: #F85556;
 	}
+	.link-color-base{
+		background-color: #00AFC4;
+	}
 	a{
 		display: block;
 		width: 100%;
