--- a/app/styles/_studyabroad-bootstrap-import.scss
+++ b/app/styles/_studyabroad-bootstrap-import.scss
@@ -11,6 +11,7 @@
 @import "components/footer";
 @import "components/link";
 @import "components/intro";
+@import "components/article";
 //动画
 @import "tools/animated";
 @import "tools/rollIn";
