--- a/app/styles/_news-bootstrap-import.scss
+++ b/app/styles/_news-bootstrap-import.scss
@@ -5,6 +5,7 @@
  */
 //全局设置
 @import "setting/variables";
+@import "setting/global";
 //模块
 @import "components/header";
 @import "components/footer";
