--- a/app/styles/_studyabroad-bootstrap-import.scss
+++ b/app/styles/_studyabroad-bootstrap-import.scss
@@ -33,4 +33,5 @@
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navs";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navbar";
+@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/list-group";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
