--- a/app/styles/screen.scss
+++ b/app/styles/screen.scss
@@ -45,7 +45,11 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 
 /*内容区*/
 .content{
-	margin-top: 20px;
+	@at-root{
+		.jumbotron{
+			box-shadow: 10px 10px 5px #888888;
+		}
+	}
 }
 
 
