最后一次大修改

--- a/app/styles/components/_link.scss
+++ b/app/styles/components/_link.scss
@@ -19,7 +19,7 @@
 		background-color: #F85556;
 	}
 	.link-color-base{
-		background-color: #00AFC4;
+		background-color: $base-color;
 	}
 	a{
 		display: block;
