--- a/app/styles/studyabroad.scss
+++ b/app/styles/studyabroad.scss
@@ -12,53 +12,19 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 			width: 100%;
 			height: auto;
 			position: relative;
-			img{
+			.wall{
 				display: block;
 				width: 100%;
 			}
 		}
-		//遮盖层
-		.mask{
-			position: absolute;
-			top:0;
-			left:0;
-			width: 100%;
-			height: 100%;
-			background-color: #000;
-		}
 		//广告
 		.slogan{
-			padding-top: 80px;
-			color:#fff;
-			h1{
-				text-align: center;
-			}
-			p{
-				text-indent: 30em;
-				color:#B73FE1;
-				font-size: 20px;
-			}
-			.slogan-detail{
-				margin-top: 80px;
-			}
-
-			.slogan-color-1{
-				color:#32CCFE;
-			}
-			.slogan-color-2{
-				color:#FAF331;
-			}
-			.slogan-color-3{
-				color:#F85556;
-			}
-
-		}
-		.tmp-hide{
-			display: none;
-		}
-		//页面小块
-		.sec{
-
+			display: block;
+			width: 100%;
+			position: absolute;
+			left:0;
+			top:0;
+			z-index: 1000;
 		}
 	}
 }
