--- a/app/styles/setting/_variables.scss
+++ b/app/styles/setting/_variables.scss
@@ -9,7 +9,7 @@ $navbar-default-link-hover-color:       $base-color;
 $navbar-default-toggle-hover-bg:        $base-color;
 $navbar-default-toggle-icon-bar-bg:     #fff;
 $navbar-default-toggle-border-color:    none; //去除掉边框颜色
-
+$grid-float-breakpoint:                 992px;   //显示的时候
 //新闻块
 $jumbotron-font-size:                   15px;
 $jumbotron-heading-font-size:           26px;
