--- a/app/styles/components/_header.scss
+++ b/app/styles/components/_header.scss
@@ -20,6 +20,14 @@
 					color:#fff !important;
 				}
 			}
+		//logo
+		.logo{
+			display: block;
+			float: left;
+			margin-left: 10px;
+			margin-top: 5px;
+			height: 70px;
+		}
 		}
 	}
 }
