--- a/app/styles/screen.scss
+++ b/app/styles/screen.scss
@@ -5,7 +5,7 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 		SETTINGS
 			variables.scss................变量文件，通过对bootstrap变量的设置，基本满足项目需求
 			global.scss....................设置页面宽度为100%，宽度不溢出
-			font.scss......................引入外来字体 
+			font.scss......................引入华文彩云
 			screen-bootstrap-import.scss.......对首页定制（裁剪和覆盖）bootstrap
 			project-bootstrap-import.scss......对项目内容定制（裁剪和覆盖）bootstrap
 			guide-bootstrap-import.scss........申请指南
@@ -58,7 +58,7 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 		width: 100%;
 		font:{
 			size: 6vw;
-			family:"彩云体";
+			family:"华文彩云";
 		}
 	}
 }
