--- a/app/styles/setting/_font.scss
+++ b/app/styles/setting/_font.scss
@@ -2,7 +2,11 @@
 // 	font-family: "tkj";
 // 	src:url('../fonts/tkj.ttf');
 // }
+// @font-face{
+// 	font-family: "彩云体";
+// 	src:url('../fonts/min1.woff'),url('../fonts/min-1.eot');
+// }
 @font-face{
-	font-family: "彩云体";
-	src:url('../fonts/min1.woff'),url('../fonts/min-1.eot');
+	font-family: "华文彩云";
+	src:url('../fonts/华文彩云.ttf'),url('../fonts/华文彩云.eot');
 }
