--- a/app/styles/setting/_font.scss
+++ b/app/styles/setting/_font.scss
@@ -8,5 +8,5 @@
 // }
 @font-face{
 	font-family: "华文彩云";
-	src:url('../fonts/华文彩云.ttf'),url('../fonts/华文彩云.eot');
+	src:url('../fonts/hwcy.ttf'),url('../fonts/hwcy.eot');
 }
