加入图片加载判断

--- a/app/styles/screen.scss
+++ b/app/styles/screen.scss
@@ -60,6 +60,7 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 			size: 6vw;
 			family:"华文彩云";
 		}
+		opacity: 0;
 	}
 }
 
